2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* VersionControl.addin.xml: Changed file menu for hig.

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.VersionControl.Dialogs/CommitDialog.cs,
	  MonoDevelop.VersionControl.Views/Statuses.cs,
	  MonoDevelop.VersionControl.Views/Logs.cs,
	  MonoDevelop.VersionControl/CommitCommand.cs,
	  MonoDevelop.VersionControl/VersionControlNodeExtension.cs,
	  MonoDevelop.VersionControl/RevertCommand.cs,
	  MonoDevelop.VersionControl/Publish.cs,
	  MonoDevelop.VersionControl/VersionControlService.cs: Worked on gnome hig
	  compliant alerts.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* VersionControl.addin.xml: Added many shortcuts.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.VersionControl.Views/Statuses.cs: Added some gettext calls.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/gui.stetic: Refactored status bar.

2008-02-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Dialogs/EditRepositoryDialog.cs: Don't
	  disable the name entry when creating a new repo. Fixes bug #363858.

2008-02-05  Mike Krüger <mkrueger@novell.com> 

	* VersionControl.addin.xml: Changed main menu items.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* VersionControl.addin.xml: Update MD version.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.VersionControl.Dialogs.SelectRepositoryDialog.cs:
	  Flush.

2008-01-24  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/AddRemoveMoveCommand.cs:
	  NotifyFileStatusChanged is now gui thread safe, so no need to invoke it
	  through Gtk.Application.Invoke.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* VersionControl.addin.xml: Updated add-in category and description.

2008-01-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/VersionControlService.cs: Make sure file status
	  change events are always fired in the gui thread.
